Tris to quad crash blender with non manifold edge in model. #44484

Closed
opened 2015-04-22 16:00:21 +02:00 by Marián Kosa · 10 comments

System Information
4GB RAM
Ubuntu 14.04
gtx 750 ti

Blender Version
Broken: 2.74 000dfc0
also for 2.74.5 a8adeeb

Short description of error
Blender is crashing when i am using tris to quads command.
I found that in mesh there is one non manifold edge. When i fix this edge (delete edge and fill hole), blender does not crash.

Exact steps for others to reproduce the error

  • open blend
  • pres alt+j
  • blender crash
    bug.blend
**System Information** 4GB RAM Ubuntu 14.04 gtx 750 ti **Blender Version** Broken: 2.74 000dfc0 also for 2.74.5 a8adeeb **Short description of error** Blender is crashing when i am using tris to quads command. I found that in mesh there is one non manifold edge. When i fix this edge (delete edge and fill hole), blender does not crash. **Exact steps for others to reproduce the error** - open blend - pres alt+j - blender crash [bug.blend](https://archive.blender.org/developer/F165673/bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarianKosa

Added subscriber: @MarianKosa

Added subscriber: @ideasman42

Added subscriber: @ideasman42

The mesh is corrupt,

bpy.context.object.data.validate(1)

Prints

BKE_mesh_validate_arrays: verts(1058), edges(3169), loops(6336), polygons(2112)
Edge 3168: is a duplicate of 108
Poly 1313 has invalid edge reference (3168), fixed using edge 108

So the question is - how did you get a mesh which is corrupt?
(importers should validate meshes they import)

The mesh is corrupt, `bpy.context.object.data.validate(1)` Prints > BKE_mesh_validate_arrays: verts(1058), edges(3169), loops(6336), polygons(2112) > Edge 3168: is a duplicate of 108 > Poly 1313 has invalid edge reference (3168), fixed using edge 108 So the question is - how did you get a mesh which is corrupt? *(importers should validate meshes they import)*
Author

So the question is - how did you get a mesh which is corrupt?

I receive stl file from client, but that worked fine.

I was able to replicate what i did.

  1. Open blend file with my mesh bug-before.blend
  2. there you can see highlighted nonmanifold edge (only thing that holds whose two parts together)
  3. I needed it as separate pieces so i riped (v) those vertexes so i can select those parts as separate mesh (in face mode or how do you call it).
  4. after this separation, you should have corrupt mesh, the inner part. (at least for me it starts crashing again)
> So the question is - how did you get a mesh which is corrupt? I receive stl file from client, but that worked fine. I was able to replicate what i did. 1. Open blend file with my mesh [bug-before.blend](https://archive.blender.org/developer/F165722/bug-before.blend) 2. there you can see highlighted nonmanifold edge (only thing that holds whose two parts together) 3. I needed it as separate pieces so i riped (v) those vertexes so i can select those parts as separate mesh (in face mode or how do you call it). 4. after this separation, you should have corrupt mesh, the inner part. (at least for me it starts crashing again)
Campbell Barton self-assigned this 2015-04-28 00:28:25 +02:00

This issue was referenced by e9dcb068c7

This issue was referenced by e9dcb068c749bc9e73450a4feb491551ede58c07

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e9dcb068c7.

Closed by commit e9dcb068c7.

@MarianKosa, kudos for exposing this bug, this is from 2012 (since BMesh inclusion, 2.63).

@MarianKosa, kudos for exposing this bug, this is from 2012 (since BMesh inclusion, 2.63).
Author

damn, that's about time when i seriously started with blender.

If remember correctly, it bothered me few times before, but it looked like random crash. Anyway, thanks for fixing it.

damn, that's about time when i seriously started with blender. If remember correctly, it bothered me few times before, but it looked like random crash. Anyway, thanks for fixing it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44484
No description provided.