Fix T44484: Edge-split corrupts mesh

Splitting non-manifold edges could produce duplicate edges.