source/blender/bmesh/tools/bmesh_edgesplit.h
@@ -27,6 +27,9 @@
  *  \ingroup bmesh
  */
 
-void BM_mesh_edgesplit(BMesh *bm, const bool use_verts, const bool tag_only, const bool copy_select);
+void BM_mesh_edgesplit(
+        BMesh *bm,
+        const bool use_verts, const bool use_non_manifold,
+        const bool tag_only, const bool copy_select);
 
 #endif /* __BMESH_EDGESPLIT_H__ */
